kubernetes/apps/services/cowtail/app/httproute-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cowtail-envoy
  annotations:
    homepage.shamubernetes.com/enabled: "true"
    homepage.shamubernetes.com/name: "Cowtail"
    homepage.shamubernetes.com/description: "Review and repair cluster incidents"
    homepage.shamubernetes.com/group: "Tools"
    homepage.shamubernetes.com/order: "90"
    homepage.shamubernetes.com/favorite: "false"
spec:
  parentRefs:
  - name: envoy-external
    namespace: network
    sectionName: https
  hostnames:
  - "cowtail.${HOME_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    timeouts:
      request: 86400s
      backendRequest: 86400s
    backendRefs:
    - name: cowtail
      port: 80
